--- a/index.html
+++ b/index.html
@@ -7,10 +7,34 @@
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link href="src/style.css" rel="stylesheet" type="text/css" />
 
-    <title>AI generator</title>
+    <title>AI cookie recipe</title>
   </head>
   <body>
-    <h1>hello</h1>
-    <script src="src/index.js"></script>
+    <header>
+      <h1>AI cookie Recipe</h1>
+    </header>
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter your favorite cookie"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" id="cookie" />
+      </form>
+      <div class="">Recipe</div>
+    </main>
+    <footer>
+      This AI project was coded by Rediat Tadesse and is
+      <a href="https://github.com/redtad1/AI-generator" target="_blank"
+        >open-saoursed on github</a
+      >and is hosted on
+      <a href="https://visionary-empanada-6c7545.netlify.app/" target="_blank"
+        >netlify.</a
+      >
+      <script src="src/index.js"></script>
+    </footer>
   </body>
 </html>
