--- a/index.html
+++ b/index.html
@@ -10,31 +10,39 @@
     <title>AI cookie recipe</title>
   </head>
   <body>
-    <header>
-      <h1>AI cookie Recipe</h1>
-    </header>
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Enter your favorite cookie"
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" id="cookie" />
-      </form>
-      <div class="">Recipe</div>
-    </main>
-    <footer>
-      This AI project was coded by Rediat Tadesse and is
-      <a href="https://github.com/redtad1/AI-generator" target="_blank"
-        >open-saoursed on github</a
-      >and is hosted on
-      <a href="https://visionary-empanada-6c7545.netlify.app/" target="_blank"
-        >netlify.</a
-      >
-      <script src="src/index.js"></script>
-    </footer>
+    <div class="container">
+      <header>
+        <h1>AI cookie Recipe</h1>
+      </header>
+      <main>
+        <form>
+          <input
+            type="text"
+            class="prompt"
+            placeholder="Enter your favorite cookie"
+            autofocus
+            required
+            autocomplete="off"
+          />
+          <input type="submit" class="cookie" />
+        </form>
+        <div class="recipe">
+          Recipe RecipeRecipe <br />
+          RecipeRecipe
+        </div>
+      </main>
+    </div>
+    <div class="container2">
+      <footer>
+        This AI project was coded by Rediat Tadesse and is
+        <a href="https://github.com/redtad1/AI-generator" target="_blank"
+          >open-saoursed on github</a
+        >and is hosted on
+        <a href="https://visionary-empanada-6c7545.netlify.app/" target="_blank"
+          >netlify.</a
+        >
+        <script src="src/index.js"></script>
+      </footer>
+    </div>
   </body>
 </html>
