--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>AI cookie Recipe</h1>
       </header>
       <main>
-        <form>
+        <form id="prompt-recipe">
           <input
             type="text"
             class="prompt"
@@ -26,7 +26,7 @@
           />
           <input type="submit" class="cookie" />
         </form>
-        <div class="recipe">
+        <div class="recipe" id="recipe-generstor">
           Recipe RecipeRecipe <br />
           RecipeRecipe
         </div>
