worked on java script.

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
             autofocus
             required
             autocomplete="off"
+            id="user-instructions"
           />
-          <input type="submit" class="cookie" />
+          <input type="submit" class="cookie-button" />
         </form>
-        <div class="recipe" id="recipe-generstor">
+        <div class="recipe" id="recipe-generator">
           Recipe RecipeRecipe <br />
           RecipeRecipe
         </div>
