final inputs on the java script.

--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
         <h1>AI cookie Recipe</h1>
       </header>
       <main>
-        <form id="prompt-recipe">
-          <input
-            type="text"
-            class="prompt"
-            placeholder="Enter your favorite cookie"
-            autofocus
-            required
-            autocomplete="off"
-            id="user-instructions"
-          />
-          <input type="submit" class="cookie-button" />
-        </form>
-
-        <div class="recipe" id="recipe-generator">
-          Recipe RecipeRecipe <br />
-          RecipeRecipe
+        <div class="form-container">
+          <form id="prompt-recipe">
+            <input
+              type="text"
+              class="prompt"
+              placeholder="Enter your desier cookie"
+              autofocus
+              required
+              autocomplete="off"
+              id="user-instructions"
+            />
+            <input type="submit" class="cookie-button" />
+          </form>
+          <small class="small"> i.e: Suger, chocolet, Butter... </small>
         </div>
+
+        <div class="recipe" id="recipe-generator"></div>
       </main>
     </div>
     <div class="container2">
