--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link href="src/style.css" rel="stylesheet" type="text/css" />
 
-    <title>AI cookie recipe</title>
+    <title>AI cookies recipe</title>
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>AI cookie Recipe</h1>
+        <h1>AI cookies Recipe</h1>
       </header>
       <main>
         <div class="form-container">
